--- a/hw/hw1.qmd
+++ b/hw/hw1.qmd
@@ -28,19 +28,28 @@ knitr::opts_chunk$set(echo = TRUE, cache = FALSE)
 To submit homework, please submit Rmd and html files to bruinlearn by the deadline.
 
 
-## Q1. Reivew of linear models 
-### The swiss data — use Fertility as the response to practice
-- An initial data analysis that explores the numerical and graphical characteristics of the data.
+## Q1. Reivew of linear models (60pts)
+The swiss data — use Fertility as the response to practice
+### Q1.1
 
-- Variable selection to choose the best model.
+An initial data analysis that explores the numerical and graphical characteristics of the data.(5pts)
 
-- An exploration of transformations to improve the fit of the model.
+### Q1.2
 
-- Diagnostics to check the assumptions of your model.
+Variable selection to choose the best model. (10pts)
 
-- Some predictions of future observations for interesting values of the predictors.
+### Q1.3
 
-- An interpretation of the meaning of the model by writing a scientific abstract. (<150 words)
+An exploration of transformations to improve the fit of the model. (10pts)
+
+### Q1.4
+Diagnostics to check the assumptions of your model. (10pts)
+
+### Q1.5
+Some predictions of future observations for interesting values of the predictors.(5pts)
+
+### Q1.6
+An interpretation of the meaning of the model by writing a scientific abstract. (<150 words) (10pts)
 
   + BACKGROUND: brief intro of the study background, what are the existing findings
   
@@ -53,47 +62,34 @@ To submit homework, please submit Rmd and html files to bruinlearn by the deadli
   + CONCLUSIONS:
 
 
-## Q2. Concavity of logistic regression log-likelihood 
-
-### Q2.1
-
-Write down the log-likelihood function of logistic regression for binomial responses.
-
-### Q2.2
-
-Derive the gradient vector and Hessian matrix of the log-likelhood function with respect to the regression coefficients $\boldsymbol{\beta}$. 
-
-### Q2.3
-
-Show that the log-likelihood function of logistic regression is a concave function in regression coefficients $\boldsymbol{\beta}$. (Hint: show that the negative Hessian is a positive semidefinite matrix.)
-
-## Q3.  
+## Q2.(70pts)  
 
 The National Institute of Diabetes and Digestive and Kidney Diseases conducted a study on 768 adult female Pima Indians living near Phoenix. The purpose of the study was to investigate factors related to diabetes. The data may be found in the the dataset `pima`.
 
-### Q3.1
+### Q2.1 
 
-Create a factor version of the test results and use this to produce an interleaved histogram to show how the distribution of insulin differs between those testing positive and negative. Do you notice anything unbelievable about the plot?
+Create a factor version of the test results and use this to produce an interleaved histogram to show how the distribution of insulin differs between those testing positive and negative. Do you notice anything unbelievable about the plot? (5pts)
 
-### Q3.2
 
-Replace the zero values of `insulin` with the missing value code `NA`. Recreatethe interleaved histogram plot and comment on the distribution.
+### Q2.2
 
-### Q3.3
+Replace the zero values of `insulin` with the missing value code `NA`. Recreatethe interleaved histogram plot and comment on the distribution. (5pts)
 
-Replace the incredible zeroes in other variables with the missing value code. Fit a model with the result of the diabetes test as the response and all the other variables as predictors. How many observations were used in the model fitting? Why is this less than the number of observations in the data frame.
+### Q2.3
 
-### Q3.4
+Replace the incredible zeroes in other variables with the missing value code. Fit a model with the result of the diabetes test as the response and all the other variables as predictors. How many observations were used in the model fitting? Why is this less than the number of observations in the data frame. (10pts)
 
-Refit the model but now without the insulin and triceps predictors. How many observations were used in fitting this model? Devise a test to compare this model with that in the previous question.
+### Q2.4
 
-### Q3.5
+Refit the model but now without the insulin and triceps predictors. How many observations were used in fitting this model? Devise a test to compare this model with that in the previous question. (10pts)
 
-Use AIC to select a model. You will need to take account of the missing values. Which predictors are selected? How many cases are used in your selected model?
+### Q2.5
 
-### Q3.6
+Use AIC to select a model. You will need to take account of the missing values. Which predictors are selected? How many cases are used in your selected model? (10pts)
 
-Create a variable that indicates whether the case contains a missing value. Use this variable as a predictor of the test result. Is missingness associated with the test result? Refit the selected model, but now using as much of the data as reasonable. Explain why it is appropriate to do this.
+### Q2.6
+
+Create a variable that indicates whether the case contains a missing value. Use this variable as a predictor of the test result. Is missingness associated with the test result? Refit the selected model, but now using as much of the data as reasonable. Explain why it is appropriate to do this. (10pts)
 
 ```{r}
 library(faraway)
@@ -121,10 +117,10 @@ missing.glm %>%
 ```
 From above regression, we found missingness was not associate with outcome. This means that the distribution of outcome when removing data with missing is still a representative of the original distribution. This justifies the use of "complete case" analysis. 
 
-### Q3.7
+### Q2.7 
 
-Using the last fitted model of the previous question, what is the difference in the odds of testing positive for diabetes for a woman with a BMI at the first quartile compared with a woman at the third quartile, assuming that all other factors are held constant? Give a confidence interval for this difference.
+Using the last fitted model of the previous question, what is the difference in the odds of testing positive for diabetes for a woman with a BMI at the first quartile compared with a woman at the third quartile, assuming that all other factors are held constant? Give a confidence interval for this difference.(10pts)
 
-### Q3.8 
+### Q2.8 
 
-Do women who test positive have higher diastolic blood pressures? Is the dias- tolic blood pressure significant in the regression model? Explain the distinction between the two questions and discuss why the answers are only apparently contradictory.
+Do women who test positive have higher diastolic blood pressures? Is the diastolic blood pressure significant in the regression model? Explain the distinction between the two questions and discuss why the answers are only apparently contradictory. (10pts)
