--- a/_posts/2025-04-03-week1-day2.md
+++ b/_posts/2025-04-03-week1-day2.md
@@ -8,6 +8,8 @@ category: biostat200Cspring2025
 
 * Review of linear regression.
 
+* Logistic regression.
+
 ## Course material
 
 All lecture notes are in RMarkdown (`qmd`). It is a good idea to learn by running through the code examples. You can do this in several ways. 
